unpackaged/main/default/objects/ETT_Delivery_Schedule_Confirmation__c/ETT_Delivery_Schedule_Confirmation__c.object-meta.xml
<CustomObject>
    <label>Delivery Schedule Confirmation</label>
    <nameField>
        <displayFormat>DSCN-{0000}</displayFormat>
        <label>Delivery Schedule Confirmation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Schedule Confirmations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>