unpackaged/main/default/objects/ETT_Delivery_Schedule_Confirmation__c/fields/ETT_Rejected_Reasons__c.field-meta.xml
<CustomField>
    <fullName>ETT_Rejected_Reasons__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejected Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>