unpackaged/main/default/objects/ETT_Delivery_Schedule_Confirmation__c/fields/ETT_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>ETT_Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Delivery Schedule Confirmations</relationshipLabel>
    <relationshipName>Delivery_Schedule_Confirmations</relationshipName>
    <type>Lookup</type>
</CustomField>