unpackaged/main/default/objects/ETT_Delivery_Schedule_Confirmation__c/fields/ETT_Status__c.field-meta.xml
<CustomField>
    <fullName>ETT_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>