unpackaged/main/default/objects/ETT_Delivery_Schedule_Confirmation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETT_Driver__c</columns>
    <columns>ETT_Rejected_Reasons__c</columns>
    <columns>ETT_Service_Appointment__c</columns>
    <columns>ETT_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>